--- a/src/reset.css
+++ b/src/reset.css
@@ -9,6 +9,11 @@
     padding: 0;
     margin: 0;
 }
+
+a{
+	text-decoration: none;
+	color: inherit; /*получить цвет который дали*/ 
+}
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
